fix: nav bar spacing

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -201,7 +201,7 @@ span:hover {
 }
 
 .main-navigation-container {
-    margin: 0 20px;
+    margin: 0 20px !important;
     background-color: #fff;
     border-radius: 10px;
     display: flex;
